--- a/Marcool_Cyber_Dataset_ML_Methods_Training.ipynb
+++ b/Marcool_Cyber_Dataset_ML_Methods_Training.ipynb
@@ -865,9 +865,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-1XSc2aDLphK",
-        "outputId": "9d263963-0d30-4981-b99d-8fa303937c80"
+        "outputId": "61cff4a8-d96f-4d58-c75c-eb49bbdfc698"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +888,35 @@
             "Epoch 7/10\n",
             "1647/1647 [==============================] - 13s 8ms/step - loss: -2179.2004 - accuracy: 0.0071 - val_loss: -2333.6509 - val_accuracy: 0.0069\n",
             "Epoch 8/10\n",
-            "1647/1647 [==============================] - 18s 11ms/step - loss: -2505.3022 - accuracy: 0.0071 - val_loss: -2658.2786 - val_accuracy: 0.0069\n"
+            "1647/1647 [==============================] - 18s 11ms/step - loss: -2505.3022 - accuracy: 0.0071 - val_loss: -2658.2786 - val_accuracy: 0.0069\n",
+            "Epoch 9/10\n",
+            "1647/1647 [==============================] - 13s 8ms/step - loss: -2831.2612 - accuracy: 0.0071 - val_loss: -2983.0410 - val_accuracy: 0.0069\n",
+            "Epoch 10/10\n",
+            "1647/1647 [==============================] - 13s 8ms/step - loss: -3157.5374 - accuracy: 0.0071 - val_loss: -3308.2578 - val_accuracy: 0.0069\n",
+            "515/515 [==============================] - 1s 3ms/step - loss: -3323.1206 - accuracy: 0.0071\n",
+            "LSTM Accuracy: 0.007105119526386261\n",
+            "Epoch 1/10\n",
+            "1647/1647 [==============================] - 42s 16ms/step - loss: -399.3329 - accuracy: 0.0071 - val_loss: -729.4680 - val_accuracy: 0.0069\n",
+            "Epoch 2/10\n",
+            "1647/1647 [==============================] - 24s 14ms/step - loss: -1056.5018 - accuracy: 0.0071 - val_loss: -1375.3444 - val_accuracy: 0.0069\n",
+            "Epoch 3/10\n",
+            "1647/1647 [==============================] - 24s 14ms/step - loss: -1703.4982 - accuracy: 0.0071 - val_loss: -2018.9930 - val_accuracy: 0.0069\n",
+            "Epoch 4/10\n",
+            "1647/1647 [==============================] - 22s 13ms/step - loss: -2349.3096 - accuracy: 0.0071 - val_loss: -2662.3247 - val_accuracy: 0.0069\n",
+            "Epoch 5/10\n",
+            "1647/1647 [==============================] - 24s 15ms/step - loss: -2995.1243 - accuracy: 0.0071 - val_loss: -3305.6123 - val_accuracy: 0.0069\n",
+            "Epoch 6/10\n",
+            "1647/1647 [==============================] - 25s 15ms/step - loss: -3641.2319 - accuracy: 0.0071 - val_loss: -3949.4336 - val_accuracy: 0.0069\n",
+            "Epoch 7/10\n",
+            "1647/1647 [==============================] - 22s 13ms/step - loss: -4287.0488 - accuracy: 0.0071 - val_loss: -4592.8203 - val_accuracy: 0.0069\n",
+            "Epoch 8/10\n",
+            "1647/1647 [==============================] - 24s 14ms/step - loss: -4932.8652 - accuracy: 0.0071 - val_loss: -5235.9790 - val_accuracy: 0.0069\n",
+            "Epoch 9/10\n",
+            "1647/1647 [==============================] - 24s 14ms/step - loss: -5578.5962 - accuracy: 0.0071 - val_loss: -5879.6284 - val_accuracy: 0.0069\n",
+            "Epoch 10/10\n",
+            "1647/1647 [==============================] - 24s 14ms/step - loss: -6224.5522 - accuracy: 0.0071 - val_loss: -6522.8379 - val_accuracy: 0.0069\n",
+            "515/515 [==============================] - 3s 5ms/step - loss: -6552.1445 - accuracy: 0.0071\n",
+            "BiLSTM Accuracy: 0.007105119526386261\n"
           ]
         }
       ]
