--- a/Exploratory_Data_and_Analysis_1_.ipynb
+++ b/Exploratory_Data_and_Analysis_1_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1npqNR4X5ikQEQFYnMw7n-3iBR3heWVub",
-      "authorship_tag": "ABX9TyPFStCZyZGcLYmCbkzrDmcd",
+      "authorship_tag": "ABX9TyPqosLp33KeqDmg+9OoUwH7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -719,6 +719,20 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For a pre-training using a ML the first step was create a pre-training model using machine learning models on the dataset that we have selected for this research, in this case the dataset is: UNSW_NB15_Training.\n",
+        "We load the UNSW-NB15 training dataset and apply data preprocessing to it in a manner akin to that used for the testing dataset.\n",
+        "For the data use we divide the training data into target labels (y_train) and feature (X_train) categories.\n",
+        "Using the training set of data with the build a Random Forest classifier and train it.\n",
+        "Using joblib.dump(), we store the trained model to a file called \"**traning_model.pkl**\"\n",
+        "Following the execution of this code, a pre-trained Random Forest model will be saved in the \"random_forest_model.pkl\" file. This file can load and use to make predictions on the testing dataset as demonstrated in the preceding responses.\n"
+      ],
+      "metadata": {
+        "id": "1_jH3dHupXho"
+      }
     },
     {
       "cell_type": "code",
